Fix overflow (box sizing border box)

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ body {
   display: none;
 }
 
-.homepage{
+.homepage {
   height: 100%;
   overflow-y: auto;
 }
@@ -336,7 +336,6 @@ h1 {
 
 .routeListItem i {
   color: #f3da5b;
-
 }
 
 .routeTitle {
@@ -383,6 +382,7 @@ h1 {
 }
 
 .detailpage {
+  box-sizing: border-box;
   padding: 10px;
   background-color: white;
   overflow-y: auto;
@@ -448,7 +448,6 @@ h1 {
 /*Route section styling*/
 
 .routeSection {
-
 }
 
 .routeSectionTitle {
